--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,2 +1,5 @@
 source "https://rubygems.org"
 gem "github-pages"
+gem "jekyll-paginate"
+gem 'pygments.rb', '~> 0.6.3'
+gem 'redcarpet', '~> 3.3', '>= 3.3.4'
