complete first draft of docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,13 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mind & Sleep Data
+title: Disecting Sleep
 email: mindatasleep@gmail.com
 description: >- 
-  Looking at the relationship between sleep and performance using
-  the Oura wearable sleep tracker and simple math.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "mindatasleep.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+  Looking at sleep and performance
+  using the Oura ring + simple math.
+baseurl: "/guide" # the subpath of your site, e.g. /blog
+url: "mindatasleep.github.io/guide" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  ""
 version: 1.0
@@ -41,7 +41,7 @@ plugins: [jekyll-paginate, pygments]
 paginate: 5
 paginate_path: "page:num"
 github:
-  repo: https://github.com/mindatasleep/oura
+  repo: https://github.com/mindatasleep/guide
 
 # Build settings
 # theme: dbyll
