--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,45 @@
+altair==3.2.0
+astroid==2.3.1
+attrs==19.3.0
+certifi==2019.9.11
+chardet==3.0.4
+Click==7.0
+entrypoints==0.3
 flake8==3.7.8
 Flask==1.0.3
+idna==2.8
+importlib-metadata==0.23
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonschema==3.1.1
+lazy-object-proxy==1.4.2
+logger==1.4
+MarkupSafe==1.1.1
+mccabe==0.6.1
+more-itertools==7.2.0
 numpy==1.16.4
 oauthlib==3.1.0
 pandas==0.24.2
 pathlib==1.0.1
+pep8==1.7.1
+psycopg2==2.8.3
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylint==2.4.2
+pyrsistent==0.15.4
 python-dateutil==2.8.0
+pytz==2019.3
 PyYAML==5.1.2
 requests==2.21.0
 requests-oauthlib==1.2.0
 scipy==1.3.0
+six==1.12.0
+SQLAlchemy==1.3.10
+toolz==0.10.0
+typed-ast==1.4.0
 urllib3==1.24.3
+Werkzeug==0.16.0
+wrapt==1.11.2
 xlrd==1.2.0
+zipp==0.6.0
