complete first draft of docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: mindatasleep@gmail.com
 description: >- 
   Looking at sleep and performance
   using the Oura ring + simple math.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/oura" # the subpath of your site, e.g. /blog
 url: "mindatasleep.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  ""
