complete first draft of docs

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -24,7 +24,7 @@ description: >-
   Looking at sleep and performance
   using the Oura ring + simple math.
 baseurl: "/oura" # the subpath of your site, e.g. /blog
-url: "mindatasleep.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "mindatasleep.github.io/oura" # the base hostname & protocol for your site, e.g. http://example.com
 source: "/docs"
 twitter_username: ""
 github_username:  ""
